tests/ui/associated-inherent-types/normalization-overflow.next.stderr
error[E0271]: type mismatch resolving `T::This normalizes-to _`
  --> $DIR/normalization-overflow.rs:14:5
   |
LL |     type This = Self::This;
   |     ^^^^^^^^^ types differ

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0271`.
